@@ -1,2 +1,4 @@
+2007-09-24	Kalpit Desai	<kvdesai@email.unc.edu>
+	* potwell.m: Removed the neutralization. Information about mean position is preserved now.
 2007-06-26	Kalpit Desai	<kvdesai@email.unc.edu>
 	* potwell.m: Added. Performs boltzmann probability analysis on a position trace. Constructs energy profile.
